--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,17 +32,27 @@ dependencies {
     def koin_version = "1.0.1"
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-scope:$koin_version"
+
     //Paging
     def paging_version = "1.0.1"
     implementation "android.arch.paging:runtime:$paging_version"
     implementation "android.arch.paging:rxjava2:$paging_version"
+
     //Moxy
     implementation 'com.arello-mobile:moxy:1.5.5'
     implementation 'com.arello-mobile:moxy-app-compat:1.5.5'
     kapt 'com.arello-mobile:moxy-compiler:1.5.5'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     //Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':data')
+    implementation project(':domain')
 }
