--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.android.support:design:27.1.1'
 
     //Koin
     def koin_version = "1.0.1"
@@ -48,6 +49,10 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //Groupie
+    implementation 'com.xwray:groupie:2.1.0'
+    implementation 'com.xwray:groupie-kotlin-android-extensions:2.1.0'
 
     //Testing
     testImplementation 'junit:junit:4.12'
