--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -5,6 +5,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
+
+    //Paging
+    def paging_version = "1.0.1"
+    implementation "android.arch.paging:runtime:$paging_version"
+    implementation "android.arch.paging:rxjava2:$paging_version"
 }
 
 sourceCompatibility = "1.7"
