#Added tests for repositories

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -28,6 +28,10 @@ android {
         }
     }
 
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
+
 }
 
 dependencies {
@@ -60,7 +64,11 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    testImplementation "io.mockk:mockk:1.8.11"
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:+'
+    androidTestCompile "org.mockito:mockito-android:+"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 }
