--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation 'com.github.markomilos:paginate:0.5.1'
 
     //Testing
+    testImplementation "org.koin:koin-test:1.0.1"
+    testImplementation "io.mockk:mockk:1.8.11"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
