--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    //Layer Modules
+    implementation project(':data')
+    implementation project(':domain')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -65,11 +70,10 @@ dependencies {
     implementation 'com.github.markomilos:paginate:0.5.1'
 
     //Testing
+    testImplementation "com.google.truth:truth:0.42"
     testImplementation "org.koin:koin-test:1.0.1"
     testImplementation "io.mockk:mockk:1.8.11"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':data')
-    implementation project(':domain')
 }
